test/conformance/reject/string_cr_escape.hdoc
hdoc(version="2.0", lang="en");

p "line\rline"
